# tweets-nlu-exploration

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: config.yaml
src/config/data/: data_processing.yaml
src/config/experiment/: baseline.yaml
src/config/save/: main.yaml  temp.yaml
src/data/: data_processors.py  data_readers.py  data_splitters.py
src/experiment_trackers/: mlflow_tracker.py
src/main_operation_modes/: data_processing.py  experiment.py
src/models/: __init__.py  base_model.py
src/trainers/: __init__.py  base_trainer.py
